update notebook urls and css

--- a/_posts/tutorials/2015-06-30-PyTables.html
+++ b/_posts/tutorials/2015-06-30-PyTables.html
@@ -2,8 +2,8 @@
 permalink: /python/pytables
 layout: user-guide
 page_type: u-guide
-description: pytables notebook covering plotly, pytables, pandas, and hdf5
-name: Graphing Data From HDF5, Pandas, PyTables and Plotly
+description: An introduction to PyTables and HDF5 for data analysis in Python.
+name: PyTables and HDF5 Tutorial
 language: python
 has_thumbnail: false
 thumbnail: /images/static-image
@@ -1009,6 +1009,47 @@ File path: nypd_motors.h5
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Because of the different magnitudes of data, I decided to log scale it.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[32]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">Data</span><span class="p">([</span>
+            <span class="n">Heatmap</span><span class="p">(</span><span class="n">z</span> <span class="o">=</span> <span class="n">cont_table</span><span class="o">.</span><span class="n">values</span><span class="p">,</span> <span class="n">x</span><span class="o">=</span><span class="n">cont_table</span><span class="o">.</span><span class="n">columns</span><span class="p">,</span> <span class="n">y</span><span class="o">=</span><span class="n">cont_table</span><span class="o">.</span><span class="n">index</span><span class="p">,</span> <span class="n">colorscale</span><span class="o">=</span><span class="s">&#39;Jet&#39;</span><span class="p">)</span>
+        <span class="p">]),</span><span class="n">filename</span><span class="o">=</span><span class="s">&#39;nypd_crashes/vehicle to vehicle heatmap&#39;</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[32]:</div>
+
+<div class="output_html rendered_html output_subarea output_execute_result">
+<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~bill_chambers/333.embed" height="525" width="100%"></iframe>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>With this we are able to see more interesting nuances in the data. For instance taxis seems to have lots of accidents with other taxis, while vans and station wagons also seem to have many accidents.</p>
+<p>There's clearly a lot to explore in this dataset.</p>
 
 </div>
 </div>
