--- a/_posts/tutorials/2015-06-30-apachespark.html
+++ b/_posts/tutorials/2015-06-30-apachespark.html
@@ -1,12 +1,12 @@
 ---
-permalink: /python/apache-spark
-layout: user-guide
-page_type: u-guide
+permalink: /ipython-notebooks/apache-spark
 description: A tutorial showing how to plot Apache Spark DataFrames with Plotly
 name: Plotting Spark DataFrames with Plotly
-language: python
 has_thumbnail: false
 thumbnail: /images/static-image
+layout: user-guide
+page_type: u-guide
+language: python
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
