--- a/_posts/tutorials/2015-06-30-collaborate.html
+++ b/_posts/tutorials/2015-06-30-collaborate.html
@@ -1,12 +1,12 @@
 ---
-permalink: /python/collaboration
-layout: user-guide
-page_type: u-guide
+permalink: /ipython-notebooks/collaboration
 description: An IPython Notebook showing how to collaboration between different programming languages with plotly
 name: Collaboration with Plotly using Python, R and MATLAB
-language: python
 has_thumbnail: false
 thumbnail: /images/static-image
+layout: user-guide
+page_type: u-guide
+language: python
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
