--- a/_posts/tutorials/2015-06-30-cufflinks.html
+++ b/_posts/tutorials/2015-06-30-cufflinks.html
@@ -1,12 +1,12 @@
 ---
-permalink: /python/cufflinks
-layout: user-guide
-page_type: u-guide
+permalink: /ipython-notebooks/cufflinks
 description: A Python library that binds the power of Plotly with the flexibility of Pandas for easy plotting
 name: Cufflinks - Easy Plotting using Plotly and Pandas
-language: python
 has_thumbnail: false
 thumbnail: /images/static-image
+layout: user-guide
+page_type: u-guide
+language: python
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
