--- a/_posts/tutorials/2015-06-30-excel_python_and_plotly.html
+++ b/_posts/tutorials/2015-06-30-excel_python_and_plotly.html
@@ -1,12 +1,12 @@
 ---
-permalink: /python/excel-python-and-plotly
-layout: user-guide
-page_type: u-guide
+permalink: /ipython-notebooks/excel-python-and-plotly
 description: This notebook is a primer on building interacitve web-based visualizations straight from an excel workbook with python, xlwings, pandas, and plotly
 name: Online Dashboards with Excel, Python, & Plotly
-language: python
 has_thumbnail: false
 thumbnail: /images/static-image
+layout: user-guide
+page_type: u-guide
+language: python
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
@@ -7360,7 +7360,7 @@ width=800
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><br></p>
 <h1 id="Step-5---Sharing-your-work-and-Collaborating-with-Others">Step 5 - Sharing your work and Collaborating with Others<a class="anchor-link" href="#Step-5---Sharing-your-work-and-Collaborating-with-Others">&#182;</a></h1><hr>
-<p>One of the main reasons we wanted to use Plotly was the ability to share these interacitve visualizations via a URL. This makes it easy for our account managers to communicate the pricing plans with a simple email containging a link to the plot.</p>
+<p>One of the main reasons we wanted to use Plotly was the ability to share these interacitve visualizations via a URL. This makes it easy for our account managers to communicate the pricing plans with a simple email containing a link to the plot.</p>
 <p>Plotly has built out some great functionality that makes sharing and collaborating really easy. When we have multiple analysts on a pricing build we can all work on a plot and once its done, its easy to share a private link with our partners.</p>
 
 </div>
