--- a/_posts/tutorials/2015-06-30-mne-tutorial.html
+++ b/_posts/tutorials/2015-06-30-mne-tutorial.html
@@ -1,12 +1,12 @@
 ---
-permalink: /python/mne-tutorial
-layout: user-guide
-page_type: u-guide
+permalink: /ipython-notebooks/mne-tutorial
 description: Create interactive visualizations using MNE-Python and Plotly
 name: Plotly visualizations for MNE-Python to process MEG/EEG data
-language: python
 has_thumbnail: false
 thumbnail: /images/static-image
+layout: user-guide
+page_type: u-guide
+language: python
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
