--- a/_posts/tutorials/2015-06-30-networkx.html
+++ b/_posts/tutorials/2015-06-30-networkx.html
@@ -1,12 +1,12 @@
 ---
-permalink: /python/network-graphs
-layout: user-guide
-page_type: u-guide
+permalink: /ipython-notebooks/network-graphs
 description: An IPython notebook showing how to use networkx to generate network graphs with Plotly's Python library.
 name: Network Graphs with the networkx and plotly Python Modules
-language: python
 has_thumbnail: false
 thumbnail: /images/static-image
+layout: user-guide
+page_type: u-guide
+language: python
 ---
 {% raw %}
 <div class="cell border-box-sizing code_cell rendered">
