--- a/_posts/tutorials/2015-06-30-redshift.html
+++ b/_posts/tutorials/2015-06-30-redshift.html
@@ -1,12 +1,12 @@
 ---
-permalink: /python/amazon-redshift
-layout: user-guide
-page_type: u-guide
+permalink: /ipython-notebooks/amazon-redshift
 description: A tutorial showing how to plot Amazon AWS Redshift data with Plotly
 name: Plotting Data From Your Redshift Data Warehouse
-language: python
 has_thumbnail: false
 thumbnail: /images/static-image
+layout: user-guide
+page_type: u-guide
+language: python
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
