--- a/_posts/tutorials/2015-06-30-ukelectionbbg.html
+++ b/_posts/tutorials/2015-06-30-ukelectionbbg.html
@@ -1,12 +1,12 @@
 ---
-permalink: /python/ukelectionbbg
-layout: user-guide
-page_type: u-guide
+permalink: /ipython-notebooks/ukelectionbbg
 description: Create interactive graphs with market data, IPython Notebook and Plotly
 name: Plotting GBP/USD price action around UK general elections
-language: python
 has_thumbnail: false
 thumbnail: /images/static-image
+layout: user-guide
+page_type: u-guide
+language: python
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
