--- a/_posts/tutorials/2015-06-30-basemap.html
+++ b/_posts/tutorials/2015-06-30-basemap.html
@@ -1,12 +1,12 @@
 ---
-permalink: /python/basemap-maps
-layout: user-guide
-page_type: u-guide
+permalink: /ipython-notebooks/basemap-maps
 description: An IPython Notebook showing how to make an interactive world map using plotly and Maplotlib Basemap
 name: Plotly maps with Matplotlib Basemap
-language: python
 has_thumbnail: false
 thumbnail: /images/static-image
+layout: user-guide
+page_type: u-guide
+language: python
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
