--- a/_posts/tutorials/2015-06-30-cartodb.html
+++ b/_posts/tutorials/2015-06-30-cartodb.html
@@ -1,12 +1,12 @@
 ---
-permalink: /python/cartodb
-layout: user-guide
-page_type: u-guide
+permalink: /ipython-notebooks/cartodb
 description: CartoDB and Plotly mashup using the Plotly, CartoDB, Pandas, and IPython Notebooks
 name: CartoDB and Plotly
-language: python
 has_thumbnail: false
 thumbnail: /images/static-image
+layout: user-guide
+page_type: u-guide
+language: python
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
