--- a/_posts/tutorials/2015-06-30-salesforce.html
+++ b/_posts/tutorials/2015-06-30-salesforce.html
@@ -1,12 +1,12 @@
 ---
-permalink: /python/salesforce
-layout: user-guide
-page_type: u-guide
+permalink: /ipython-notebooks/salesforce
 description: Create interactive graphs with salesforce, IPython Notebook and plotly
 name: Interactive graphing with Salesforce
-language: python
 has_thumbnail: false
 thumbnail: /images/static-image
+layout: user-guide
+page_type: u-guide
+language: python
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
