ipython notebook index page

--- a/_posts/2015-05-25-ipython-notebooks_index.html
+++ b/_posts/2015-05-25-ipython-notebooks_index.html
@@ -1,7 +1,7 @@
 ---
 title: Python for IPython Notebooks | Examples | Plotly
 name: Plotly for IPython Notebooks
-permalink: python/ipython-notebooks/
+permalink: /ipython-notebooks/
 description: Using IPython Notebooks with Plotly.
 layout: getstart
 thumbnail:
