--- a/_posts/tutorials/2015-06-30-cufflinks.html
+++ b/_posts/tutorials/2015-06-30-cufflinks.html
@@ -14,9 +14,7 @@ language: python
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Cufflinks">Cufflinks<a class="anchor-link" href="#Cufflinks">&#182;</a></h1><p>This library binds the power of <a href="https://plot.ly">plotly</a> with the flexibility of <a href="http://pandas.pydata.org/">pandas</a> for easy plotting.</p>
-<p>This library is available on <a href="https://github.com/santosjorge/cufflinks">https://github.com/santosjorge/cufflinks</a></p>
-<p>This tutorial assumes that the plotly user credentials have already been configured as stated on the <a href="https://plot.ly/python/getting-started/">getting started</a> guide.</p>
+<h1 id="Cufflinks">Cufflinks<a class="anchor-link" href="#Cufflinks">&#182;</a></h1><p>Cufflinks binds <a href="https://plot.ly">plotly</a> directly to <a href="http://pandas.pydata.org/">pandas</a> dataframes.</p>
 
 </div>
 </div>
