--- a/_posts/user_guide_python/2015-06-30-pdf-reports.html
+++ b/_posts/user_guide_python/2015-06-30-pdf-reports.html
@@ -328,6 +328,15 @@ Successfully installed Pillow-2.9.0 pyPdf2-1.25.1 reportlab-3.2.0 xhtml2pdf-0.0.
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="Generating-Images-on-the-fly">Generating Images <em>on the fly</em><a class="anchor-link" href="#Generating-Images-on-the-fly">&#182;</a></h4>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <p>The static report in the example above uses graphs that were already created in Plotly. Sometimes it's helpful to use graph images that are created on-the-fly. For example, if you're using <a href="https://plot.ly/javascript-graphing-library">plotly.js</a> to create the web-reports you might not be saving the graphs to accounts on <a href="https://plot.ly">plot.ly</a>.</p>
 <p>To create static images of graphs on-the-fly, use the <code>plotly.plotly.image</code> class. This class generates images by making a request to the Plotly image server.</p>
 <p>Here's an alternative template that uses <code>py.image.get</code> to generate the images and template them into an HTML and PDF report.</p>
