--- a/_posts/ggplot2/box/2015-07-15-boxplot-facet-grid.html
+++ b/_posts/ggplot2/box/2015-07-15-boxplot-facet-grid.html
@@ -2,9 +2,9 @@
 name: facets with time series 
 plot_url: https://plot.ly/~MattSundquist/17100/
 language: ggplot2
-suite: facets
+suite: box
 description: Inspired by <a href="http://www.ats.ucla.edu/stat/r/faq/growth.htm">the IDRE at UCLA</a>.
-order: 16
+order: 5
 sitemap: false
 ---
 # Learn about API authentication here: https://plot.ly/ggplot2/getting-started
