--- a/_posts/ggplot2/box/2015-07-15-boxplot-facet.html
+++ b/_posts/ggplot2/box/2015-07-15-boxplot-facet.html
@@ -2,9 +2,9 @@
 name: facets with box plots 
 plot_url: https://plot.ly/~MattSundquist/17059
 language: ggplot2
-suite: facets
+suite: box
 description: Inspired by <a href="http://stackoverflow.com/questions/21388845/ggplot-arranging-boxplots-of-multiple-y-variables-for-each-group-of-a-continuou">Stack Overflow</a>.
-order: 15
+order: 6
 sitemap: false
 ---
 # Learn about API authentication here: https://plot.ly/ggplot2/getting-started
