--- a/_posts/user_guide_python/2015-06-30-pdf-reports.html
+++ b/_posts/user_guide_python/2015-06-30-pdf-reports.html
@@ -59,16 +59,6 @@ Collecting pyPdf2 (from xhtml2pdf)
 [?25hRequirement already satisfied (use --upgrade to upgrade): six in /Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages (from html5lib-&gt;xhtml2pdf)
 Requirement already satisfied (use --upgrade to upgrade): pip&gt;=1.4.1 in /Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages (from reportlab&gt;=2.2-&gt;xhtml2pdf)
 Requirement already satisfied (use --upgrade to upgrade): setuptools&gt;=2.2 in /Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages (from reportlab&gt;=2.2-&gt;xhtml2pdf)
-Building wheels for collected packages: xhtml2pdf, pyPdf2, reportlab
-  Running setup.py bdist_wheel for xhtml2pdf
-  Stored in directory: /Users/chriddyp/Library/Caches/pip/wheels/30/29/7d/2a654daefdfc4a22b8db5c40ed5484e0826795156f8db80fab
-  Running setup.py bdist_wheel for pyPdf2
-  Stored in directory: /Users/chriddyp/Library/Caches/pip/wheels/fb/dc/59/8509bdf92a52265bede0c75a70f2af01da24c109405799f623
-  Running setup.py bdist_wheel for reportlab
-  Stored in directory: /Users/chriddyp/Library/Caches/pip/wheels/f5/d5/b5/ac451e39e9ca2f401a62afd1f841522af903701caca19f1c16
-Successfully built xhtml2pdf pyPdf2 reportlab
-Installing collected packages: pyPdf2, Pillow, reportlab, xhtml2pdf
-Successfully installed Pillow-2.9.0 pyPdf2-1.25.1 reportlab-3.2.0 xhtml2pdf-0.0.6
 </pre>
 </div>
 </div>
@@ -292,7 +282,7 @@ Successfully installed Pillow-2.9.0 pyPdf2-1.25.1 reportlab-3.2.0 xhtml2pdf-0.0.
 
 <div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_stream output_stderr output_text">
-<pre>WARNING:xhtml2pdf:Created temporary file /var/folders/d4/c4jpnb754pj3cfj5pv8y9m080000gn/T/tmpSlye2b
+<pre>WARNING:xhtml2pdf:Created temporary file /var/folders/d4/c4jpnb754pj3cfj5pv8y9m080000gn/T/tmp1ttqTi
 </pre>
 </div>
 </div>
@@ -312,7 +302,7 @@ Successfully installed Pillow-2.9.0 pyPdf2-1.25.1 reportlab-3.2.0 xhtml2pdf-0.0.
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[9]:</div>
+<div class="prompt input_prompt">In&nbsp;[8]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="o">!</span> open report.pdf
@@ -337,7 +327,7 @@ Successfully installed Pillow-2.9.0 pyPdf2-1.25.1 reportlab-3.2.0 xhtml2pdf-0.0.
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[10]:</div>
+<div class="prompt input_prompt">In&nbsp;[9]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -360,7 +350,7 @@ Successfully installed Pillow-2.9.0 pyPdf2-1.25.1 reportlab-3.2.0 xhtml2pdf-0.0.
 <span class="p">]</span>
 
 <span class="c"># Generate their images using `py.image.get`</span>
-<span class="n">images</span> <span class="o">=</span> <span class="p">[</span><span class="n">base64</span><span class="o">.</span><span class="n">b64encode</span><span class="p">(</span><span class="n">py</span><span class="o">.</span><span class="n">image</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">figure</span><span class="p">,</span> <span class="n">width</span><span class="o">=</span><span class="n">width</span><span class="p">,</span> <span class="n">height</span><span class="o">=</span><span class="n">height</span><span class="p">))</span> <span class="k">for</span> <span class="n">figure</span> <span class="ow">in</span> <span class="n">figures</span><span class="p">]</span>
+<span class="n">images</span> <span class="o">=</span> <span class="p">[</span><span class="n">base64</span><span class="o">.</span><span class="n">b64encode</span><span class="p">(</span><span class="n">py</span><span class="o">.</span><span class="n">image</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">figure</span><span class="p">,</span> <span class="n">width</span><span class="o">=</span><span class="n">width</span><span class="p">,</span> <span class="n">height</span><span class="o">=</span><span class="n">height</span><span class="p">))</span><span class="o">.</span><span class="n">decode</span><span class="p">(</span><span class="s">&#39;utf-8&#39;</span><span class="p">)</span> <span class="k">for</span> <span class="n">figure</span> <span class="ow">in</span> <span class="n">figures</span><span class="p">]</span>
 
 <span class="n">report_html</span> <span class="o">=</span> <span class="s">&#39;&#39;</span>
 <span class="k">for</span> <span class="n">image</span> <span class="ow">in</span> <span class="n">images</span><span class="p">:</span>
@@ -388,7 +378,7 @@ Successfully installed Pillow-2.9.0 pyPdf2-1.25.1 reportlab-3.2.0 xhtml2pdf-0.0.
 
 </div>
 
-<div class="output_area"><div class="prompt output_prompt">Out[10]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[9]:</div>
 
 
 <div class="output_text output_subarea output_execute_result">
