move to geom_smooth

--- a/_posts/ggplot2/smooth/2015-07-15-regression-line-facet-grid.html
+++ b/_posts/ggplot2/smooth/2015-07-15-regression-line-facet-grid.html
@@ -2,7 +2,7 @@
 name: <code>stat_smooth</code> with <code>facet_grid</code> 
 plot_url: https://plot.ly/~MattSundquist/17156
 language: ggplot2
-suite: facets
+suite: smooth
 description: Write feedback@plot.ly with questions or  <a href="https://github.com/ropensci/plotly/issues">submit an issue</a>. See the <a href="http://ropensci.github.io/plotly-test-table/tables/0e3d5ca144d27d8416318824c1b6ec1421a51045/index.html">ggplot2 → plotly test tables</a> for ggplot2 conversion coverage. This example was inspired by <a href="http://stackoverflow.com/questions/12572035/adding-a-regression-line-to-a-facet-grid-with-qplot-in-r">Stack Overflow</a>.
 order: 1
 sitemap: false
