--- a/_posts/ggplot2/smooth/2015-07-16-stat_smooth.html
+++ b/_posts/ggplot2/smooth/2015-07-16-stat_smooth.html
@@ -2,8 +2,8 @@
 name: mpg with <code>stat_smooth</code>
 plot_url: https://plot.ly/~MattSundquist/17165/
 language: ggplot2
-suite: geom_abline
-order: 1
+suite: smooth
+order: 2
 sitemap: false
 ---
 # Learn about API authentication here: https://plot.ly/ggplot2/getting-started
