--- a/_posts/ggplot2/smooth/2015-07-15-gaussian-glm-fit.html
+++ b/_posts/ggplot2/smooth/2015-07-15-gaussian-glm-fit.html
@@ -2,7 +2,7 @@
 name: <code>geom_smooth</code> with Gaussian 
 plot_url: https://plot.ly/~MattSundquist/17242
 language: ggplot2
-suite: geom_abline
+suite: smooth
 description: Inspired by <a href="http://stackoverflow.com/questions/26138541/use-geom-smooth-with-transformed-y">Stack Overflow</a>.
 order: 3
 sitemap: false
