--- a/_posts/ggplot2/smooth/2015-07-16-stat_smooth.html
+++ b/_posts/ggplot2/smooth/2015-07-16-stat_smooth.html
@@ -1,5 +1,5 @@
 ---
-name: mpg with <code>stat_smooth</code>
+name: mpg plot with <code>stat_smooth</code>
 plot_url: https://plot.ly/~MattSundquist/17165/
 language: ggplot2
 suite: smooth
