--- a/_posts/ggplot2/smooth/2015-07-17-point-and-line.html
+++ b/_posts/ggplot2/smooth/2015-07-17-point-and-line.html
@@ -2,9 +2,9 @@
 name: horizontal line and fit with <code>geom_hline</code>
 plot_url: https://plot.ly/~MattSundquist/17236/
 language: ggplot2
-suite: geom_abline
+suite: smooth
 description: Inspired by <a href="http://stackoverflow.com/questions/13254441/add-a-horizontal-line-to-plot-and-legend-in-ggplot2">Stack Overflow</a>.
-order: 2
+order: 4
 sitemap: false
 ---
 # Learn about API authentication here: https://plot.ly/ggplot2/getting-started
