Update and rename _posts/ggplot2/geom_abline/2015-07-15-facet-with-smooth.html to _posts/ggplot2/smooth/2015-07-15-facet-with-smooth.html

--- a/_posts/ggplot2/smooth/2015-07-15-facet-with-smooth.html
+++ b/_posts/ggplot2/smooth/2015-07-15-facet-with-smooth.html
@@ -2,7 +2,7 @@
 name: facets with <code>stat_smooth</code>
 plot_url: https://plot.ly/~MattSundquist/17276
 language: ggplot2
-suite: geom_abline
+suite: smooth
 description: Inspired by <a href="http://www.ats.ucla.edu/stat/r/dae/truncreg.htm">the IDRE at UCLA</a>.
 order: 5
 sitemap: false
