Update and rename _posts/ggplot2/geom_abline/2015-07-16-baseball-stats-with-fit.html to _posts/ggplot2/smooth/2015-07-16-baseball-stats-with-fit.html

--- a/_posts/ggplot2/smooth/2015-07-16-baseball-stats-with-fit.html
+++ b/_posts/ggplot2/smooth/2015-07-16-baseball-stats-with-fit.html
@@ -2,9 +2,9 @@
 name: facets, baseball, and <code>stat_smooth</code>
 plot_url: https://plot.ly/~MattSundquist/17267
 language: ggplot2
-suite: geom_abline
+suite: smooth
 description: Inspired by <a href="http://www3.nd.edu/~steve/computing_with_data/16_Baseball_example/baseball_example.html">Steven Buechler</a>.
-order: 4
+order: 6
 sitemap: false
 ---
 # Learn about API authentication here: https://plot.ly/ggplot2/getting-started
