--- a/_posts/python/sending-data/2015-04-09-overwrite.html
+++ b/_posts/python/sending-data/2015-04-09-overwrite.html
@@ -1,7 +1,7 @@
 ---
-name: Overwrite a chart's data with new data
-description: Use the filename kwarg to overwrite a chart's data
-plot_url: http://i.imgur.com/rohcAiA.gif
+name: Overwrite chart data with new data
+description: The simplest and recommended way to update a chart remotely.<br><small>You can overwrite a chart's data with new data remotely, simply by including its file name in the filename kwarg.</small>
+plot_url: http://i.imgur.com/VuobuN3.gif
 language: python
 suite: sending-data
 order: 0
@@ -10,19 +10,9 @@ sitemap: false
 # Learn about API authentication here: https://plot.ly/python/getting-started
 # Find your api_key here: https://plot.ly/settings/api
 
-# You can overwrite a chart's data with new data simply by including its file name
-# in the file name kwarg
-# This is the simplest and recommended way to update a chart by API calls
-
 import plotly.plotly as py
 from plotly.graph_objs import *
 
-data = Data([
-    Scatter(
-        x=[1, 2],
-        y=[3, 4]
-    )
-])
+data = Data([ Scatter(x=[1, 2], y=[3, 4]) ])
 
-# Overwrites the data of chart with filename 'my plot'
-plot_url = py.plot(data, filename='my plot')
+plot_url = py.plot(data, <b>filename='my plot'</b>)
