--- a/_posts/python/sending-data/2015-04-09-sending-data_index.html
+++ b/_posts/python/sending-data/2015-04-09-sending-data_index.html
@@ -1,10 +1,9 @@
 ---
-title: Sending data to charts in Python | Examples | Plotly
-name: Sending data to charts in Python
+title: Sending data to charts | Examples | Plotly
+name: Sending data to charts
 permalink: python/sending-data-to-charts/
 description: How to send data to charts in Python. Examples of overwriting charts with new data, extending traces, and adding new traces.
 layout: base
-thumbnail: /images/polar-scatter.png
 language: python
 page_type: example_index
 has_thumbnail: false
