--- a/_posts/python/sending-data/2015-04-09-add-traces.html
+++ b/_posts/python/sending-data/2015-04-09-add-traces.html
@@ -1,7 +1,7 @@
 ---
 name: Add new traces to a chart
-description: Use the filename and fileopt kwargs to add new traces to a chart remotely
-plot_url: http://i.imgur.com/m6FoP5A.gif
+description: NOT RECOMMENDED<br>When updating a chart's data remotely, we recommend <a href="#overwrite-chart-data-with-new-data">overwriting</a> all of the chart's data instead of adding new traces.
+plot_url: http://i.imgur.com/RzrURdn.gif
 language: python
 suite: sending-data
 order: 2
@@ -10,21 +10,11 @@ sitemap: false
 # Learn about API authentication here: https://plot.ly/python/getting-started
 # Find your api_key here: https://plot.ly/settings/api
 
-# NOT RECOMMENDED
-# When updating a chart's data remotely with an API call, we recommend 
-# overwriting all of the chart's data instead of adding new traces.
-# There are few cases where it is better to add new traces than overwrite all
-# of the chart's data
-
 import plotly.plotly as py
 from plotly.graph_objs import *
 
-new_trace = Scatter(
-    x=[3, 4],
-    y=[3, 2]
-)
+new_trace = Scatter( x=[3, 4], y=[3, 2] )
 
 data = Data( [ new_trace1 ] )
 
-# New traces are added to the plot in the order supplied
-plot_url = py.plot(data, filename='append plot', fileopt='append')
+plot_url = py.plot(data, filename='append plot', <b>fileopt='append'</b>)
