--- a/_posts/python/dashboard/2015-07-29-dashboard-index.html
+++ b/_posts/python/dashboard/2015-07-29-dashboard-index.html
@@ -1,5 +1,6 @@
 ---
 title: Python Dashboards
+name: Dashboards
 permalink: python/dashboard/
 description: Dashboard of charts created and updated with Python
 language: python
@@ -30,10 +31,10 @@ order: 0
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="../">
+        <a class="navbar-brand" href="https://plot.ly/python/">
           <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
-        <a class="navbar-brand" href="./">Python &raquo; Dashboards</a>
+        <a class="navbar-brand" href="https://plot.ly/python/">Python &raquo; Dashboards</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-left">
