--- a/_posts/ggplot2/geom_histogram/2015-04-09-histogram_ggplot2_index.html
+++ b/_posts/ggplot2/geom_histogram/2015-04-09-histogram_ggplot2_index.html
@@ -2,7 +2,7 @@
 title: ggplot2 Histograms | Examples | Plotly
 name: Histograms
 permalink: ggplot2/histograms/
-description: How to make a histogram in ggplot2. Seven examples of colored, horizontal, and normal histogram bar charts.
+description: How to make a histogram in ggplot2. Examples and tutorials for plotting histograms with geom_histogram, geom_density and stat_density.
 layout: base
 thumbnail: /images/histogram.png
 language: ggplot2
